# GenAI-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
data/: sample_handbook.txt
docs/: deployment.md  production.md
documind/api/: app.py
documind/core/: rag.py
lessons/: 00_hello_claude.py  01_chat_and_stream.py  02_structured_and_tools.py  03_embeddings.py  04_chunk_and_ingest.py  05_rag.py  06_citations_eval.py
web/: README.md  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/components/: chat-message.tsx  chat.tsx  sources-panel.tsx  theme-provider.tsx  theme-toggle.tsx
web/lib/: api.ts
